# kanri

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.zed/: tasks.json
docs/: BLUEPRINTS.md  BUILDING.md  CONFIGURATION.md  PROFILES.md
src/: autocomplete.rs  backup.rs  cli.rs  config.rs  lib.rs  library.rs  main.rs  migrations.rs  platform.rs  program.rs  templates.rs  terminal.rs
src/blueprints/: engine.rs  mod.rs  storage.rs
src/blueprints/modules/: fs.rs  mod.rs  os.rs  project.rs
src/cli/: blueprints.rs  commands.rs  config.rs  profiles.rs  projects.rs  root.rs  templates.rs
src/commands/: blueprints.rs  config.rs  mod.rs  profiles.rs  root.rs  templates.rs
src/tests/: mod.rs  test_autocomplete.rs  test_blueprints.rs  test_library.rs  test_project.rs
