[package]
name = "kanri"
description = "Manage your projects within the terminal."
authors = ["Konstantin Zhigaylo <zero@kostyazero.com>"]
repository = "https://github.com/kostya-zero/kanri"
homepage = "https://github.com/kostya-zero/kanri"
keywords = ["workspace", "projects", "manager", "cli"]
readme = "README.md"
license = "MIT"
version = "0.10.0-dev"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.12.0"
indexmap = { version = "2.12.1", features = ["std", "serde"] }
indicatif = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tempfile = "3.20.0"
toml = "0.9.8"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4.7"

[target.'cfg(unix)'.dependencies]
dirs-next = "=2.0.0"

[profile.dev]
incremental = false

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
incremental = false
lto = "thin"
debug = 0
strip = true
